restored changebars (leading to slow LaTeXing)

--- a/Standard/ebnf-OMG_OntoIOp_current.tex
+++ b/Standard/ebnf-OMG_OntoIOp_current.tex
@@ -43,8 +43,8 @@
  %
   % \newcommand{\cbs}[0]{\xspace}
   % \newcommand{\cbe}[0]{\xspace}
- \newcommand{\cbs}[0]{\color{red}\xspace} %\cbstart{}
- \newcommand{\cbe}[0]{\color{black}\xspace} %\cbend{}
+ \newcommand{\cbs}[0]{\cbstart{}\color{red}\xspace} %
+ \newcommand{\cbe}[0]{\cbend{}\color{black}\xspace} %
 
 
 \usepackage{pdflscape}
