--- a/Standard/ebnf-OMG_OntoIOp_current.tex
+++ b/Standard/ebnf-OMG_OntoIOp_current.tex
@@ -6205,10 +6205,11 @@ The semantics of a \syntax{BasicOMS} $O$ has been defined above.
 The semantics of $O = \syntax{oms-reference O' ImportName}$
 is given by
  \begin{itemize}
-   \item $\Inst(\syntax{oms-reference O' ImportName}) = \Inst(\Gamma(O'))$
-   \item $\Sig(\syntax{oms-reference O' ImportName}) = \Sig(\Gamma(O'))$
-   \item $\Mod(\syntax{oms-reference O' ImportName}) = \Mod(\Gamma(O'))$
-   \item $\Th(\syntax{oms-reference O' ImportName}) = \Th(\Gamma(O'))$
+   \item \cbs $O''$ is the extension of $O'$ with a declaration that the logic is $\Gamma.logic$ (e.g.\ by a suitable extension of the IRI)\cbe
+   \item $\Inst(\syntax{oms-reference O' ImportName}) = \Inst(\Gamma(O''))$
+   \item $\Sig(\syntax{oms-reference O' ImportName}) = \Sig(\Gamma(O''))$
+   \item $\Mod(\syntax{oms-reference O' ImportName}) = \Mod(\Gamma(O''))$
+   \item $\Th(\syntax{oms-reference O' ImportName}) = \Th(\Gamma(O''))$
    \item $Env(\Gamma, O)$ extends the graph of imports $\Gamma.imports$
          with a new node for $O$ labeled as defined in the items above
          and with a new edge from $O'$ to $O$ named \syntax{ImportName} 
