inserted correct ontology IRI according to https://github.com/tillmo/DOL/issues/202#issuecomment-123110873

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -7403,7 +7403,11 @@ Part of the background and design considerations of the \DOL Ontology can be fou
 
 \section{Normative State and Normative References}\label{a:dol-onto-norm}
 
-The normative \DOL Ontology snapshots being part of this OMG standard are published at \url{http://www.omg.org/spec/DOL/Current/ontology}.
+\cbs
+The canonical namespace IRI for the \DOL Ontology is \url{http://www.omg.org/spec/DOL/dol-language/}.
+Normative snapshots of the implementation are published there.
+The IRI for the version of the \DOL Ontology that corresponds to this version of the OMG standard is \url{http://www.omg.org/spec/DOL/20150801/dol-language/}.
+\cbe
 The \DOL Ontology is currently implemented in OWL 2 (\nisref{W3C/TR REC-owl2-syntax:2009}).
 The normative snapshots are encoded in RDF/XML using the OWL 2 mapping to RDF graphs (\nisref{W3C/TR REC-owl2-mapping-to-rdf:2012}).
 
