--- a/Standard/ebnf-OMG_OntoIOp_current.tex
+++ b/Standard/ebnf-OMG_OntoIOp_current.tex
@@ -1935,7 +1935,9 @@ demonstrated to be a \termref{logical consequence} of the axioms.}
 
 \cbs
 \termdefinition{tool}{software for processing \termref{DOL libraries} and \termref{OMS}.}
-  \termdefinition{theorem prover}{software \termref{tool} that attempts to prove that a given sentence is the logical consequence of some given set of \termref{axioms} and \termref{theorems}.}
+\termdefinition{theorem proving}{process of demonstraing that a \termref{sentence} (or \termref{OMS}) is the \termref{logical consequence} of some OMS.}
+
+  \termdefinition{theorem prover}{software \termref{tool} implementing \termref{theorem proving}.}
 \cbe
 
 
@@ -2204,8 +2206,9 @@ Any satisfiable OMS is \termref{consistent}, but there are some
 \termref{logics} where the converse does not hold.
 \end{note}
 
-  \termdefinition{model finder}{\termref{tool} that finds  \termref{models} of an
-\termref{OMS} and thus proves it to be \termref{satisfiable}.}
+\termdefinition{model finding}{process that finds \termref{models} of an \termref{OMS} and thus proves it to be \termref{satisfiable}.}	
+
+  \termdefinition{model finder}{\termref{tool} that implements \termref{model finding}.}
 \cbe
 
 \termdefinition{module}{\termref{structured OMS} expressing a \termref{subOMS} that conservatively extends to conservative extension  the whole \termref{OMS}.}
@@ -2399,6 +2402,9 @@ relation has been explicitly specified; when $c$ is omitted, it defaults to $1$.
     For both matching and alignment, see \cite{DBLP:books/daglib/0032976,KhanKeet13}.
   \end{note}
 
+\cbs
+\termdefinition{matcher}{\termref{tool} that implements \termref{matching}.}
+\cbe
  
 \termdefinitionLight{\termref{OMS network}\synonym distributed OMS\synonym hyperontology}{\termref{graph} with \termref{OMS} as nodes and OMS mappings\index{OMS mapping} as edges, showing how the OMS are interlinked.}
 %\ednote{Is ``hyperontology'' a synonym for ``OMS network'', or rather for
