- fix of illustration import - minor spelling errors

--- a/Standard/ebnf-OMG_OntoIOp_current.tex
+++ b/Standard/ebnf-OMG_OntoIOp_current.tex
@@ -7442,21 +7442,21 @@ The classes in the \DOL Ontology (and their annotations) correspond to the terms
 The \DOL Ontology additionally contains some top-level abstract classes
 as follows:
 
-\includegraphics[width=0.8\textwidth]{dol-onto-classes.png}
+\includegraphics[width=0.8\textwidth]{./illustrations/dol-onto-classes.png}
 
 This reflects central issues in the structure of \DOL:
 while \DOL, as a language, is a linguistic entity, it is
 related to mathematical entities like logics, signatures and models
 through its semantics. That is, semantic entities provide the
-bridge bewteen linguistic and mathematical entities.
+bridge between linguistic and mathematical entities.
 Moreover, processes (like theorem proving) provide algorithmic
-procedcures for manipulating DOL librares, and tools implement
+procedures for manipulating DOL libraries, and tools implement
 these in software.
 
 The top level object properties are structured in a similar way:
 \medskip
 
-\includegraphics[width=0.4\textwidth]{dol-onto-properties.png}
+\includegraphics[width=0.4\textwidth]{./illustrations/dol-onto-properties.png}
 
 
 \cbe
