fixed LaTeX problems

--- a/Standard/dol-papers.bib
+++ b/Standard/dol-papers.bib
@@ -18,15 +18,15 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
 }
 
 
-@inbook{JYB-Festschrift2015-DOL,
+@incollection{JYB-Festschrift2015-DOL,
 	Author = {Till Mossakowski and Mihai Codescu and Fabian Neuhaus and Oliver Kutz},
-	Chapter = {{The distributed ontology, modelling and specification language - DOL}},
+	title = {{The distributed ontology, modelling and specification language - DOL}},
 	Date-Added = {2015-01-15 22:16:06 +0000},
 	Date-Modified = {2015-01-15 22:19:05 +0000},
 	Editor = {Koslow, Arnold AND Buchsbaum, Arthur},
 	Publisher = {Birkh\"auser},
 	Series = {Studies in Universal Logic},
-	Title = {{The Road to Universal Logic--Festschrift for 50th birthday of Jean-Yves Beziau, Volume II}},
+	bookTitle = {{The Road to Universal Logic--Festschrift for 50th birthday of Jean-Yves Beziau, Volume II}},
 	Year = {2015}}
 
 
