--- a/Standard/ebnf-OMG_OntoIOp_current.tex
+++ b/Standard/ebnf-OMG_OntoIOp_current.tex
@@ -4199,7 +4199,7 @@ At the beginning of a \DOL library, one can declare a \syntax{PrefixMap} for abb
 
 %%%%%%%%%%%%%%%%%%%%%%%%
 
-\ssclause{Concrete Syntax}\label{c:libraries}
+\ssclause{Concrete Syntax}
 
 	\sssclause{Documents}
 \begin{lstlisting}[language=ebnf,escapeinside={()},morecomment={[l]{\%\%\ }}]
@@ -4858,7 +4858,7 @@ within the \DOL library.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%
-\ssclause{Concrete Syntax of}\label{a:dol-text:mappings}
+\ssclause{Concrete Syntax}
 
 \begin{lstlisting}[language=ebnf,escapeinside={()}]
 
@@ -4877,7 +4877,7 @@ Fragment      ::= '#' ifragment($<$ \rm as defined in \nisref{IETF/RFC 3987} $>$
 \end{lstlisting}
 
 
-In a CURIE without a prefix, the \syntax{reference} part is \notallowed to match any of the keywords of the \DOL syntax (cf.\ clause \label{c:keywords}).
+In a CURIE without a prefix, the \syntax{reference} part is \notallowed to match any of the keywords of the \DOL syntax (cf.\ clause \ref{c:keywords}).
 
 \medspace
 %%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -5490,7 +5490,7 @@ semantics. It is straightforward to see that the satisfaction condition holds.
 \qed\end{definition}
 
 
-\begin{definition}[Common Logic - \Clogic]\label{CommonLogic}
+\begin{definition}[Common Logic - \Clogic]\label{sem:CommonLogic}
 A common logic signature
 $\Sigma$ (called vocabulary in Common Logic terminology) consists of a
 set of names, with a subset called the set of discourse names, and a
@@ -7442,21 +7442,21 @@ The classes in the \DOL Ontology (and their annotations) correspond to the terms
 The \DOL Ontology additionally contains some top-level abstract classes
 as follows:
 
-\includegraphics[width=0.8\textwidth]{./illustrations/dol-onto-classes.png}
+\includegraphics[width=0.8\textwidth]{illustrations/dol-onto-classes.png}
 
 This reflects central issues in the structure of \DOL:
 while \DOL, as a language, is a linguistic entity, it is
 related to mathematical entities like logics, signatures and models
 through its semantics. That is, semantic entities provide the
-bridge between linguistic and mathematical entities.
+bridge bewteen linguistic and mathematical entities.
 Moreover, processes (like theorem proving) provide algorithmic
-procedures for manipulating DOL libraries, and tools implement
+procedcures for manipulating DOL librares, and tools implement
 these in software.
 
 The top level object properties are structured in a similar way:
 \medskip
 
-\includegraphics[width=0.4\textwidth]{./illustrations/dol-onto-properties.png}
+\includegraphics[width=0.4\textwidth]{illustrations/dol-onto-properties.png}
 
 
 \cbe
@@ -9299,7 +9299,7 @@ for one or more repetitions of \syntax{N}.
 %Note that ISO EBNF lacks an operator for ``at least one repetition''.  This \IS therefore adopts the following convention: Whenever some sequence \syntax{S} is repeated at least once, we give it a non-terminal identifier of its own (\syntax{RepeatedS = S \{ S \} ;}), or group it as in \syntax{LongerExpression = Foo Bar ( S \{ S \} ) ;}.
 \cbe
 
-\sclause{Documents}\label{c:libraries}
+\sclause{Documents}\label{e:libraries}
 \begin{lstlisting}[language=ebnf,escapeinside={()}]  % abstract syntax
 
 Document           ::= DOLLibrary | NativeDocument
