Updated abstract syntax mof image

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -9592,7 +9592,7 @@ complete, meaning that it comprises all answer substitutions to the query.
 but using minimizations, (part of) OMS can be equipped with a closed
 world semantics.\cbe
 
-\includegraphics[scale=0.5]{mof/dia/dia6.png}
+\includegraphics[scale=0.5]{mof/abstract-syntax.png}
 
 \sclause{EBNF Concrete Syntax}
 
