--- a/Standard/ebnf-OMG_OntoIOp_current.tex
+++ b/Standard/ebnf-OMG_OntoIOp_current.tex
@@ -9631,7 +9631,7 @@ complete, meaning that it comprises all answer substitutions to the query.
 but using minimizations, (part of) OMS can be equipped with a closed
 world semantics.\cbe
 
-\includegraphics[scale=0.5]{mof/dia/dia6.png}
+\includegraphics[scale=0.5]{mof/queries.png}
 
 \sclause{EBNF Concrete Syntax}
 
