--- a/Standard/lstsemantic.sty
+++ b/Standard/lstsemantic.sty
@@ -55,6 +55,7 @@ morestring=[b]",%
 {morekeywords={%
 end,%
 hide,reveal,translate,project,%
+along,%
 library,logic,syntax,language,%
 ontology,and,then,%
 combine,%
