--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -41,8 +41,8 @@
  %
   % \newcommand{\cbs}[0]{\xspace}
   % \newcommand{\cbe}[0]{\xspace}
- \newcommand{\cbs}[0]{\cbstart{}\color{red}\xspace} %
- \newcommand{\cbe}[0]{\cbend{}\color{black}\xspace} %
+ \newcommand{\cbs}{} % [0]{\cbstart{}\color{red}\xspace} %
+ \newcommand{\cbe}{} % [0]{\cbend{}\color{black}\xspace} %
 
 
 \usepackage{pdflscape}
