updated semantics of documents

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -6069,6 +6069,13 @@ $$sem(\Gamma,q)=\Gamma'$$
 $\Gamma'  = \Gamma.\{\current = (lang, logic, q.\syntax{syntaxRef})\}$. 
 The semantics is defined only if $\mathit{lang}$ supports q.\syntax{syntaxRef}.
 
+For a \syntax{LibraryImport} $q$,
+$$sem(\Gamma, q) = \Gamma \cup \Gamma'$$
+
+\noindent where $sem(\Gamma, q.\syntax{libraryName}) = anIRI$ and
+$sem(anIRI) = \Gamma'$.
+
+
 \ssclause{Semantics of Networks}
 
 The semantics of networks of OMS is given with the help of a directed graph. Its nodes
