corrected concrete syntax of DOL libraries

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4211,9 +4211,9 @@ At the beginning of a \DOL library, one can declare a \syntax{PrefixMap} for abb
 
 	\sssclause{Documents}
 \begin{lstlisting}[language=ebnf,escapeinside={()},morecomment={[l]{\%\%\ }}]
-Document                 = [ PrefixMap ] , DOLLibrary
+Document                 = DOLLibrary
                          | NativeDocument ;
-DOLLibrary             = 'library' , LibraryName , Qualification , { LibraryItem } ;
+DOLLibrary             = [ PrefixMap ] , 'library' , LibraryName , Qualification , { LibraryItem } ;
 NativeDocument = ($<$) language and serialization specific ($>$) ;
 LibraryItem             = LibraryImport | OMSDefinition | NetworkDefinition | MappingDefinition 
                           | Qualification ;
